<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/reg_Id_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/register_title_textView"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reg_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="32dp"
        android:text="Full Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_Id_title" />

    <EditText
        android:id="@+id/reg_name_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/reg_enter_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/reg_name_textView"
        app:layout_constraintTop_toBottomOf="@+id/reg_Id_title" />

    <TextView
        android:id="@+id/reg_pass_textView_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/reg_name_textView"
        app:layout_constraintTop_toBottomOf="@+id/reg_name_textView" />

    <TextView
        android:id="@+id/reg_pass_textView_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/reg_pass_textView_1"
        app:layout_constraintTop_toBottomOf="@+id/reg_pass_textView_1" />

    <TextView
        android:id="@+id/reg_addr_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:text="Address"
        app:layout_constraintEnd_toEndOf="@+id/reg_pass_textView_2"
        app:layout_constraintTop_toBottomOf="@+id/reg_pass_textView_2" />

    <EditText
        android:id="@+id/reg_addr_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/reg_address"
        app:layout_constraintStart_toEndOf="@+id/reg_addr_textView"
        app:layout_constraintTop_toBottomOf="@+id/reg_pass_editText_2" />

    <EditText
        android:id="@+id/reg_pass_editText_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/reg_pass_textView_2"
        app:layout_constraintTop_toBottomOf="@+id/reg_pass_editText_1" />

    <EditText
        android:id="@+id/reg_pass_editText_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/reg_pass_textView_1"
        app:layout_constraintTop_toBottomOf="@+id/reg_name_editText" />

    <TextView
        android:id="@+id/reg_phone_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:text="Phone"
        app:layout_constraintEnd_toEndOf="@+id/reg_addr_textView"
        app:layout_constraintTop_toBottomOf="@+id/reg_addr_textView" />

    <EditText
        android:id="@+id/reg_phone_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/reg_phone_num"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/reg_addr_textView"
        app:layout_constraintTop_toBottomOf="@+id/reg_addr_editText" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Register"
        app:layout_constraintEnd_toEndOf="@+id/reg_phone_editText"
        app:layout_constraintTop_toBottomOf="@+id/reg_phone_editText" />


</androidx.constraintlayout.widget.ConstraintLayout>